# ielts-exam-generator

./: .gitignore  CLAUDE.md  generation_history.db  ielts_audio_generator.py  nats.conf  nats.yml  nats_client.py  nats_server.py  pyproject.toml  requirements.txt  skills-lock.json
.agents/skills/openai-agents-sdk-guidelines/: README.md
.agents/skills/openai-agents-sdk-guidelines/rules/: agent-basic-config.md  agent-tool-choice.md  context-local-context.md  conversation-manual-history.md  conversation-sessions.md  guardrail-execution-mode.md  guardrail-input-validation.md  guardrail-output-validation.md  runner-exception-handling.md  runner-max-turns.md  tool-error-handling.md
.agents/skills/qwen3-tts-skills/scripts/: run_qwen3_tts.py
.claude/: settings.json  skills-lock.json
.claude/agents/: code-reviewer.md  ielts-domain-expert.md  nats-debugger.md  pydantic-reviewer.md  security-auditor.md  test-writer.md  tts-specialist.md
.claude/rules/: agents-pipeline.md  architecture.md  logging.md  nats-workers.md  running.md  skills.md  tts-audio.md
.claude/skills/openai-agents-sdk-guidelines/rules/: agent-dynamic-instructions.md  agent-output-type.md  (+17 more)
.claude/skills/qwen3-tts-skills/: README.md  README.zh-CN.md
.claude/skills/qwen3-tts-text-formatting/: SKILL.md
listening/agents/part1/: agent1.py  agent2.py  config.py  main_agent.py
nats_test/Pub and Sub/: publisher.py  subscriber.py
src/audio/: generator.py
src/common/: log_config.py
src/workers/: common.py  publisher.py  subscriber.py  worker_audio.py  worker_qa.py  worker_qna.py  worker_tts.py
(+14 files in other folders)
